--- a/printf/libft/Makefile
+++ b/printf/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: lottavi <lottavi@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/14 11:56:20 by lottavi           #+#    #+#              #
-#    Updated: 2023/04/14 11:56:21 by lottavi          ###   ########.fr        #
+#    Updated: 2023/05/10 17:09:51 by lottavi          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -48,6 +48,7 @@ SRCS =	ft_isalpha.c \
 		ft_putstr_fd.c \
 		ft_putendl_fd.c \
 		ft_putnbr_fd.c \
+		ft_putchar.c \
 
 BSRCS =	ft_lstnew.c \
 		ft_lstadd_front.c \
